--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -14,6 +14,11 @@
 
   <body>
     <div class="container">
+      <div class="hero-unit">
+        <h1>GoCI</h1>
+        <h2>Go Continuous Integration</h2>
+        <p>Coming soon</p>
+      </div>
       {% template "content" .Tmpl %}
     </div> <!-- /container -->
     <!-- Le javascript
