--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <div class="hero-unit">
-        <h1>GoCI</h1>
+        <h1><a href="/">GoCI</a></h1>
         <h2>Go Continuous Integration</h2>
         <p>Coming soon</p>
       </div>
