--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -13,6 +13,8 @@
   </head>
 
   <body>
+    <div><a href="https://github.com/zeebo/goci"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a></div>
+    <span class="label label-warning" style="position: absolute; top:10px; right: 200px;">{% .State %}</span>
     <div class="container">
       <div class="hero-unit">
         <h1><a href="/">GoCI</a></h1>
