--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -6,27 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+
+    {% if .Meta.SubNav %}
+      {% template "nav_padding" 126 %}
+    {% else %}
+      {% template "nav_padding" 90 %}
+    {% end %}
+
     {% template "css" .Meta.CSS %}
+    {% template "js" .Meta.JS %}
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
 
   <body>
-    <div><a href="https://github.com/zeebo/goci"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a></div>
-    <span class="label label-warning" style="position: absolute; top:10px; right: 200px;">{% .State %}</span>
-    <div class="container">
-      <div class="hero-unit">
-        <h1><a href="/">GoCI</a></h1>
-        <h2>Go Continuous Integration</h2>
-        <p>Coming soon</p>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <span class="brand" style="float: right">Status: {% .State %}</span>
+          <div class="nav-collapse">
+            <ul class="nav">
+              {% template "nav" . %}
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
       </div>
+    </div>
+
+    <div class="container">
+      {% template "sub_nav" . %}
       {% template "content" .Tmpl %}
     </div> <!-- /container -->
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    {% template "js" .Meta.JS %}
   </body>
 </html>
 
