--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -23,7 +23,7 @@
   <body>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container">
+        <div class="container-fluid">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -39,10 +39,18 @@
       </div>
     </div>
 
-    <div class="container">
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div id="sidebar" class="span3">
+    </div><!--/span-->
+
+    <div id="content" class="span9">
       {% template "sub_nav" . %}
       {% template "content" .Tmpl %}
-    </div> <!-- /container -->
+    </div><!--/span-->
+    <a href="#" class="toggles"><i class="icon-chevron-left"></i></a>
+  </div><!--/row-->
+</div><!--/.fluid-container-->​
+
   </body>
 </html>
-
