--- a/templates/base.tmpl
+++ b/templates/base.tmpl
@@ -48,7 +48,7 @@
       {% template "sub_nav" . %}
       {% template "content" .Tmpl %}
     </div><!--/span-->
-    <a href="#" class="toggles"><i class="icon-chevron-left"></i></a>
+    <a href="#" class="toggles">Queue<i class="icon-chevron-left"></i></a>
   </div><!--/row-->
 </div><!--/.fluid-container-->​
 
