--- a/templates/_base.html
+++ b/templates/_base.html
@@ -14,6 +14,7 @@
 
     <!-- Le styles -->
     <link href="/static/css/bootstrap-simplex.css" rel="stylesheet">
+    <link href="/static/css/main.css" rel="stylesheet">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
