--- a/templates/_base.html
+++ b/templates/_base.html
@@ -2,112 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootswatch: Simplex</title>
+    <title>GoCI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
-    <!-- Le styles -->
     <link href="/static/css/bootstrap-simplex.css" rel="stylesheet">
     <link href="/static/css/main.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
-
   </head>
-
-  <body class="preview" data-spy="scroll" data-target=".subnav" data-offset="50">
-
-
-  <!-- Navbar
-    ================================================== -->
- <div class="navbar navbar-fixed-top">
-   <div class="navbar-inner">
-     <div class="container">
-       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-       </a>
-       <a class="brand" href="../">Bootswatch</a>
-       <div class="nav-collapse" id="main-menu">
+  <body data-offset="50">
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">GoCI</a>
+          <div class="nav-collapse" id="main-menu">
             <ul class="nav" id="main-menu-left">
-            	<li><a href="http://news.bootswatch.com">News</a></li>
-            	<li><a id="swatch-link" href="/#gallery">Gallery</a></li>
-            	<li class="dropdown">
-            		<a class="dropdown-toggle" data-toggle="dropdown" href="#">Preview <b class="caret"></b></a>
-            		<ul class="dropdown-menu" id="swatch-menu">
-            			<li><a href="/default">Default</a></li>
-            			<li class="divider"></li>
-            			<li><a href="/amelia">Amelia</a></li>
-            			<li><a href="/cerulean">Cerulean</a></li>
-            			<li><a href="/cyborg">Cyborg</a></li>
-            			<li><a href="/journal">Journal</a></li>
-            			<li><a href="/readable">Readable</a></li>
-            			<li><a href="/simplex">Simplex</a></li>
-            			<li><a href="/slate">Slate</a></li>
-            			<li><a href="/spacelab">Spacelab</a></li>
-            			<li><a href="/spruce">Spruce</a></li>
-            			<li><a href="/superhero">Superhero</a></li>
-            			<li><a href="/united">United</a></li>
-            		</ul>
-            	</li>
+              <li><a href="/pkg">Packages</a></li>
+              <li><a href="/result">Results</a></li>
+              <li><a href="/work">Work</a></li>
+              <li><a href="/how">How</a></li>
             </ul>
-            <ul class="nav pull-right" id="main-menu-right">
-            	<li><a rel="tooltip" target="_blank" href="http://builtwithbootstrap.com/" title="Showcase of Bootstrap sites &amp; apps" onclick="_gaq.push([\'_trackEvent\', \'click\', \'outbound\', \'builtwithbootstrap\']);">Built With Bootstrap <i class="icon-share-alt"></i></a></li>
-            	<li><a rel="tooltip" target="_blank" href="https://wrapbootstrap.com/?ref=bsw" title="Marketplace for premium Bootstrap templates" onclick="_gaq.push([\'_trackEvent\', \'click\', \'outbound\', \'wrapbootstrap\']);">WrapBootstrap <i class="icon-share-alt"></i></a></li>
-            </ul>
-       </div>
-     </div>
-   </div>
- </div>
-
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container">
-
-    {{ template "content" . }}
-
+      {{ template "content" . }}
     </div><!-- /container -->
-
-
-
-    <!-- Le javascript
-    ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-      !function ($) {
-        $(function(){
-          // fix sub nav on scroll
-          var $win = $(window)
-            , $nav = $('.subnav')
-            , navHeight = $('.navbar').first().height()
-            , navTop = $('.subnav').length && $('.subnav').offset().top - navHeight
-            , isFixed = 0
-
-          processScroll()
-
-          $win.on('scroll', processScroll)
-
-          function processScroll() {
-            var i, scrollTop = $win.scrollTop()
-            if (scrollTop >= navTop && !isFixed) {
-              isFixed = 1
-              $nav.addClass('subnav-fixed')
-            } else if (scrollTop <= navTop && isFixed) {
-              isFixed = 0
-              $nav.removeClass('subnav-fixed')
-            }
-          }
-        })
-      }(window.jQuery)
-    </script>
   </body>
 </html>
